# py

./: .gitignore  AGENTS.md  FEATURES_LLM_PROVIDERS.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: pages.yml
ai/: 00-architecture.md  01-types.md  02-events.md  03-errors.md  04-models.md  05-utils-json-parse.md  06-utils-overflow.md  07-utils-sanitize-unicode.md  08-utils-event-stream.md  09-utils-headers.md  10-cancellation.md  11-env.md  12-config.md  13-registry.md  14-provider-base.md  15-generate-models.md  16-anthropic-basics.md  17-anthropic-tools.md  18-anthropic-reasoning.md  19-anthropic-caching.md  20-anthropic-errors-abort.md  21-openai-completions-basics.md  22-openai-responses-basics.md  23-openai-tools.md  24-openai-reasoning.md  25-openai-errors-abort.md  26-openai-compatible.md  27-public-api.md  28-unit-test-sweep.md  29-contract-test-infra.md  30-anthropic-contract-tests.md  31-openai-contract-tests.md  32-live-smoke.md  README.md
docs/: _config.yml  getting-started.md  index.md
docs/examples/: custom-agent-tool.md  safe-shell-runtime.md  summarize-document.md
docs/libraries/: llm-providers.md  py-agent-tools.md  py-agent.md
docs/references/: llm-providers.md  py-agent-tools.md  py-agent.md
llm-providers/: README.md  pyproject.toml
llm-providers/src/: __init__.py  api_registry.py  communication.py  config.py  generated_models.py  model_registry.py  models.py  provider.py  tui.py  types.py
llm-providers/src/llm_providers/: __init__.py  api_registry.py  auth.py  communication.py  tui.py
llm-providers/src/llm_providers/providers/: __init__.py  anthropic.py  openai.py  openai_compatible.py
llm-providers/src/providers/: anthropic.py  openai.py  openai_compatible.py
llm-providers/tests/: __init__.py  test_api_registry.py  test_auth.py  test_communication.py  test_config.py  test_model_registry.py  test_provider_streaming.py  test_tui.py
py-agent/: README.md  pyproject.toml
py-agent-tools/: README.md  pyproject.toml
py-agent-tools/src/py_agent_tools/: __init__.py  builtin.py  shell_args.py  shell_parser.py  shell_registry.py  shell_runtime.py  shell_subset.py
py-agent-tools/tests/: __init__.py  test_builtin_tools.py  test_shell_args.py  test_shell_parser.py  test_shell_registry.py  test_shell_runtime.py  test_shell_subset.py
py-agent/src/: agent_loop.py  proxy.py
py-agent/src/py_agent/: __init__.py  agent.py  agent_loop.py  types.py
py-agent/tests/: __init__.py  test_agent.py  test_agent_loop.py  test_proxy.py
py-coding-agent/: README.md  pyproject.toml
py-coding-agent/docs/: configuration.md
py-coding-agent/src/: __init__.py  cli.py  compaction.py  config.py  extensions.py  integration.py  session.py  tools.py  tui_controller.py
py-coding-agent/src/py_coding_agent/: __init__.py  __main__.py  cli.py  config.py  extensions.py  integration.py  skills.py  tools.py  tui.py
py-coding-agent/tests/: __init__.py  test_cli.py  test_compaction.py  test_config.py  test_extensions.py  test_integration.py  test_session.py  test_skills.py  test_tools.py  test_tui_controller.py
