[project]
name = "llm-providers"
version = "0.1.0"
description = "LLM providers library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx", "pydantic>=2.0,<3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
