[project]
name = "py-coding-agent"
version = "0.1.0"
description = "CLI coding agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["py-agent-tools", "py-agent", "llm-providers", "textual>=0.80,<1.0"]

[project.scripts]
py-coding-agent = "py_coding_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_coding_agent"]
